--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="root"></div>
     <!-- O caminho foi corrigido para incluir a pasta 'site', resolvendo o erro 404. -->
-    <script type="module" src="/site/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
